2024-03-14  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Etc/BUGS: HIST_IGNORE_DUPS mishandles quoted whitespace.

	* 52752: Src/params.c, Test/B02typeset.ztst: more typeset -p fixes
	for local exports and improper "export -x" / "readonly -r" output.

2024-03-13  Bart Schaefer  <schaefer@zsh.org>

	* 52753: Doc/Zsh/grammar.yo: Clarify "nocorrect" when introducing
	precommand modifiers.

	* unposted: Doc/Zsh/contrib.yo: update doc for "colors" to match
	workers/47489,50212 (italic and bright)

2024-03-12  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Src/Modules/ksh93.c: "typeset -p" has problems with
	special parameters having NULL values, use a dummy static instead.

	* 52742: Src/builtin.c: fix bad interactions of "typeset -p" with
	GLOBAL_EXPORT, plus some other inconsistencies.

2024-03-13  Oliver Kiddle  <opk@zsh.org>

	* 52724: Src/Modules/hlgroup.c: fix .zle.sgr for empty sequences

2024-03-09  Bart Schaefer  <schaefer@zsh.org>

	* 52725: Src/Modules/ksh93.c: updated named reference semantics

2024-03-09  Stephane Chazelas  <stephane@chazelas.org>

	* 52721: fix metafication and regexp/subject confusion in
	pcre_match error message.

2024-03-08  Stephane Chazelas  <stephane@chazelas.org>

	* 52704: Doc/Zsh/params.yo, mention new ${ ... } and ${|...}
	operators and fix process substitution terminology in
	documentation of $zsh_eval_context.

2024-03-05  Bart Schaefer  <schaefer@zsh.org>

	* 52692: Doc/Zsh/params.yo, Src/builtin.c, Src/params.c,
	Test/K01nameref.ztst: local declaration (typeset) of the
	name of a named reference hides the reference rather than
	following it.  Also fix two related crash bugs.

2024-03-05  Stephane Chazelas  <stephane@chazelas.org>

	* 52685: Doc/Zsh/restricted.yo: fix typo in the name of bash's
	BASH_ENV variable.

2024-03-04  Bart Schaefer  <schaefer@zsh.org>

	* unposted (cf. 52615): Src/builtin.c: use META_NOALLOC for 52591

	* unposted (cf. 52617): Src/params.c: only scalars can instantiate
	a declared named reference
